# arc-theme

./: .gitignore  INSTALL.autotools.md  INSTALL.md  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
.github/: ISSUE_TEMPLATE.md
common/: Makefile.am  meson.build
common/cinnamon/: meson.build
common/cinnamon/3.2/sass/: _common.scss
common/cinnamon/3.4/sass/: _common.scss
common/cinnamon/3.6/sass/: _common.scss
common/cinnamon/3.8/sass/: _common.scss
common/cinnamon/4.0/sass/: _common.scss  cinnamon-dark.scss
common/cinnamon/4.2/sass/: _common.scss
common/cinnamon/4.6/sass/: _colors.scss  _common.scss
common/cinnamon/5.2/sass/: _common.scss
common/cinnamon/5.4/sass/: _common.scss
common/gnome-shell/: meson.build
common/gnome-shell/3.18/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/3.18/sass/: _common.scss  gnome-shell-solid-dark.scss
common/gnome-shell/3.24/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/3.24/sass/: _common.scss
common/gnome-shell/3.26/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/3.26/sass/: _common.scss
common/gnome-shell/3.28/sass/: _common.scss  gnome-shell-solid.scss
common/gnome-shell/3.30/sass/: _common.scss
common/gnome-shell/3.32/sass/: _colors.scss  _common.scss
common/gnome-shell/3.34/: arc-dark.gnome-shell-theme.gresource.xml
common/gnome-shell/3.34/sass/: _common.scss
common/gnome-shell/3.36/sass/: _colors.scss  _common.scss
common/gnome-shell/3.38/sass/: _common.scss  gnome-shell-solid.scss  gnome-shell.scss
common/gnome-shell/40/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/40/sass/: _common.scss  gnome-shell-solid-dark.scss
common/gnome-shell/41/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme-lighter.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/41/sass/: _colors.scss  _common.scss  gnome-shell-lighter.scss  gnome-shell-solid-lighter.scss
common/gnome-shell/42/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
common/gnome-shell/42/sass/: _colors.scss  _common.scss
common/gnome-shell/43/sass/: _common.scss  _drawing.scss
common/gnome-shell/44/sass/: _common.scss
common/gnome-shell/45/sass/: _common.scss
common/gnome-shell/46/gresource/: gnome-shell-theme-dark.gresource.xml  gnome-shell-theme.gresource.xml
common/gtk-2.0/: Makefile.am  meson.build
common/gtk-2.0/assets-dark/: meson.build
common/gtk-2.0/assets-light/: meson.build
common/gtk-2.0/dark/: meson.build
common/gtk-2.0/light/: meson.build
common/gtk-3.0/: Makefile.am  common.am  meson.build
common/gtk-3.0/3.18/: Makefile.am
common/gtk-3.0/3.18/sass/: _applications.scss  _common.scss  _drawing.scss  _lightdm.scss  _transparent_widgets.scss  _unity.scss  gtk-dark.scss  gtk-darker.scss  gtk-lighter.scss  gtk-solid-dark.scss  gtk-solid-darker.scss  gtk-solid-lighter.scss  gtk-solid.scss  gtk.scss
common/gtk-3.0/3.20/sass/: _applications.scss  _budgie.scss  _colors.scss  _common.scss  _drawing.scss  _transparent_widgets.scss  gtk-dark.scss  gtk-darker.scss  gtk-lighter.scss  gtk-solid-lighter.scss  gtk.scss.in
common/gtk-3.0/3.22/sass/: _applications.scss  _colors-public.scss  _common.scss  _transparent_widgets.scss  gtk-solid.scss
common/gtk-3.0/3.24/: Makefile.am
common/gtk-3.0/3.24/sass/: _applications.scss  _colors-public.scss  _common.scss  _libhandy.scss  _transparent_widgets.scss  gtk-dark.scss  gtk-darker.scss  gtk-lighter.scss  gtk-solid-dark.scss  gtk-solid-darker.scss  gtk.scss
common/gtk-3.0/assets/: meson.build
common/gtk-3.0/sass/: _applications.scss  _common.scss
common/gtk-4.0/: meson.build
common/gtk-4.0/4.2/assets/: meson.build
common/gtk-4.0/4.2/sass/: _common.scss  _drawing.scss  gtk-dark.scss  gtk-darker.scss  gtk-lighter.scss  gtk-solid-dark.scss  gtk-solid-darker.scss  gtk-solid-lighter.scss  gtk-solid.scss  gtk.scss
common/gtk-4.0/sass/: _common.scss  _drawing.scss  gtk.scss.in
common/metacity-1/: meson.build  metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-2.xml  metacity-theme-3-dark.xml  metacity-theme-3.xml
common/unity/: meson.build
common/xfwm4/: Makefile.am  meson.build
common/xfwm4/dark/: meson.build  themerc
common/xfwm4/light/: meson.build  themerc
extra/: Makefile.am
m4/: arc-cinnamon.m4  arc-gnome-shell.m4  arc-gtk3.m4
meson/: install-file.py  render-assets.py
