if ENABLE_LIGHT
gtk3theme_DATA = light/thumbnail.png
endif

if ENABLE_DARKER
gtk3themedarker_DATA = light/thumbnail.png
endif

if ENABLE_DARK
gtk3themedark_DATA = dark/thumbnail.png
endif

if ENABLE_LIGHTER
gtk3themelighter_DATA = light/thumbnail.png
endif

EXTRA_DIST = \
	light \
	dark

SUBDIRS = $(GTK3_VERSION)
DIST_SUBDIRS = 3.18 3.20 3.22 3.24
